--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,11 +2,11 @@ name: A workflow to run my own action
 on: [issues]
 
 jobs:
-  build:
+  test:
     name: Happy birthday action
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: .
+      - uses: ./
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
