--- a/action.yml
+++ b/action.yml
@@ -5,9 +5,12 @@ author: "pvinis@gmail.com"
 runs:
   using: "node12"
   main: "index.js"
-  env:
-    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 branding:
   icon: "loader"
   color: "purple"
+
+inputs:
+  github-token:
+    description: "Github token"
+    required: true
