--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+      - uses: yarn install
       - uses: ./
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
