--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,8 +6,13 @@ jobs:
     name: Happy birthday action
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: yarn install
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - name: Install dependencies
+        run: yarn install
       - uses: ./
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
